--- a/index.html
+++ b/index.html
@@ -22,32 +22,98 @@
         <div class="introduction-gallery__item">
           <div class="item__picture john">
             <div class="picture_icons">
-              <div class="icon icon-tweeter">
-                <img src="images/Twitter.png" alt="tweeter-icon" />
-              </div>
-              <div class="icon icon-facebook">
-                <img src="images/FB.png" alt="facebook-icon" />
-              </div>
-              <div class="icon icon-google">
-                <img src="images/G+.png" alt="google+-icon" />
-              </div>
+              <a href="#">
+                <div class="icon icon-tweeter">
+                  <img src="images/Twitter.png" alt="tweeter-icon" />
+                </div>
+              </a>
+              <a href="#">
+                <div class="icon icon-facebook">
+                  <img src="images/FB.png" alt="facebook-icon" />
+                </div>
+              </a>
+              <a href="#">
+                <div class="icon icon-google">
+                  <img src="images/G+.png" alt="google+-icon" />
+                </div>
+              </a>
             </div>
           </div>
           <div class="item__name">John Handson</div>
           <div class="item__profession">Lead Designer</div>
         </div>
         <div class="introduction-gallery__item">
-          <div class="item__picture alex"></div>
+          <div class="item__picture alex">
+            <div class="item__picture john" id="hidden">
+              <div class="picture_icons">
+                <a href="#">
+                  <div class="icon icon-tweeter">
+                    <img src="images/Twitter.png" alt="tweeter-icon" />
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="icon icon-facebook">
+                    <img src="images/FB.png" alt="facebook-icon" />
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="icon icon-google">
+                    <img src="images/G+.png" alt="google+-icon" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
           <div class="item__name">Alex Cutter</div>
           <div class="item__profession">Developer</div>
         </div>
         <div class="introduction-gallery__item">
-          <div class="item__picture elena"></div>
+          <div class="item__picture elena">
+            <div class="item__picture john" id="hidden">
+              <div class="picture_icons">
+                <a href="#">
+                  <div class="icon icon-tweeter">
+                    <img src="images/Twitter.png" alt="tweeter-icon" />
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="icon icon-facebook">
+                    <img src="images/FB.png" alt="facebook-icon" />
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="icon icon-google">
+                    <img src="images/G+.png" alt="google+-icon" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
           <div class="item__name">Elena Simpson</div>
           <div class="item__profession">Artist</div>
         </div>
         <div class="introduction-gallery__item">
-          <div class="item__picture lily"></div>
+          <div class="item__picture lily">
+            <div class="item__picture john" id="hidden">
+              <div class="picture_icons">
+                <a href="#">
+                  <div class="icon icon-tweeter">
+                    <img src="images/Twitter.png" alt="tweeter-icon" />
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="icon icon-facebook">
+                    <img src="images/FB.png" alt="facebook-icon" />
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="icon icon-google">
+                    <img src="images/G+.png" alt="google+-icon" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
           <div class="item__name">Lily Allen</div>
           <div class="item__profession">Graphic Designer</div>
         </div>
